--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,24 +1,18 @@
-<%= simple_form_for @project do |f| %>
-  <% if @project.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@project.errors.count, "error") %> prohibited this project from being saved:</h2>
+<%= simple_form_for(@project) do |f| %>
+  <%= f.error_notification %>
 
-      <ul>
-      <% @project.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-  <%= f.input :title %>
-  <%= f.input :subtitle %>
-  <%= f.input :des %>
-  <%= f.input :s1 %>
-  <%= f.input :s2 %>
-  <%= f.input :s3 %>
-  <%= f.input :s4 %>
+  <div class="form-inputs">
+    <%= f.input :title %>
+    <%= f.input :subtitle %>
+    <%= f.input :des %>
+    <%= f.input :s1 %>
+    <%= f.input :s2 %>
+    <%= f.input :s3 %>
+    <%= f.input :s4 %>
+    <%= f.input :s5 %>
+  </div>
 
   <div class="form-actions">
-  <%= f.button :submit %>
+    <%= f.button :submit %>
   </div>
 <% end %>
