--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,11 +30,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">EXTRARA</a>
+            <%=link_to("EXTRARA", root_path, { :class=>"navbar-brand" } )%>
+         <!-- <a class="navbar-brand" href="#">EXTRARA</a> -->
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
             <li><a href="#about">Forum</a></li>
             <li><a href="#contact">Projects</a></li>
             <li class="dropdown">
