--- a/app/views/welcome/index.html
+++ b/app/views/welcome/index.html
@@ -30,17 +30,20 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">EXTRARA</a>
+          <%=link_to("EXTRARA", root_path, { :class=>"navbar-brand" } )%>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="file:///Users/Aaron/Desktop/Extrara%20Scratch/P1-Home/P1-Home.html">Home</a></li>
-            <li><a href="#about">Forum</a></li>
-            <li><a href="#contact">Projects</a></li>
+            <li><a href="/forum">Forum</a></li>
+            <li><%=link_to("Projects", root_path )%></li>
+              </ul>
+            </li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%=current_user.name%> <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="#">Action</a></li>
+                <li> <li class="active"> <%=link_to "Profile", user_path(current_user.id)%> <span class="sr-only"></span></li></li>
                 <li><a href="#">Another action</a></li>
                 <li><a href="#">Something else here</a></li>
                 <li class="divider"></li>
@@ -48,13 +51,6 @@
                 <li><a href="#">Separated link</a></li>
                 <li><a> <%= link_to 'Sign out', destroy_user_session_path %>
 </a></li>
-              </ul>
-            </li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="../navbar/"></a></li>
-            <li><a href="../navbar-static-top/"></a></li>
-            <li class="active"> <%=link_to (current_user.name), user_path(current_user.id)%> <span class="sr-only"></span></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -108,38 +104,11 @@
         <%end%>
 
       </div>
-
-
-
-
 <div id="map-canvas"></div>
-
-
-
-
-
-
-
-
-
       <hr>
       <footer>
         <p>&copy; EXTRARA 2015</p>
       </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
