--- a/app/views/welcome/index1.html
+++ b/app/views/welcome/index1.html
@@ -30,13 +30,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-
           <%=link_to("EXTRARA", root_path, { :class=>"navbar-brand" } )%>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="/forum">Forum</a></li>
             <li><%=link_to("Projects", root_path )%></li>
+              </ul>
+            </li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%=current_user.name%> <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
@@ -45,15 +48,9 @@
                 <li><a href="#">Something else here</a></li>
                 <li class="divider"></li>
                 <li class="dropdown-header">Nav header</li>
+                <li><a href="#">Separated link</a></li>
                 <li><a> <%= link_to 'Sign out', destroy_user_session_path %>
-                <li><a href="#"></a></li>
-              </ul>
-            </li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="../navbar/"></a></li>
-            <li><a href="../navbar-static-top/"></a></li>
-            <li class="active"><a href="file:///Users/Aaron/Desktop/Extrara%20Scratch/P2-Profile/P2-Profile.html">Profile <span class="sr-only">(current)</span></a></li>
+</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -62,114 +59,56 @@
 
 <div class="jumbotron">
       <div class="container">
-        <h1>Collaborative Creation</h1>
-        <p>Extrara is a community of developers engineers designers astronomers entreprenuers and more. With collaborative creation the world is....</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Start your project &raquo;</a></p>
+        <h1>New Projects</h1>
+        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+        <p><a class="btn btn-primary btn-lg" href="/projects/new" role="button">Start your project &raquo;</a></p>
       </div>
     </div>
 
     <div class="container">
 
-      <!-- Example row of columns -->
-   <!--   <div class="row">
-        <div class="col-md-4">
-          <div class="thumbnail">
-            <img src="http://placehold.it/800x500" alt="">
+
+    <div class="row">
+        <!--<div class="col-lg-4">
+          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
           <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-          </div>
-       </div>
-        <div class="col-md-4">
-          <div class="thumbnail">
-            <img src="http://placehold.it/800x500" alt="">
+        </div><!-- /.col-lg-4 -->
+       <!-- <div class="col-lg-4">
+          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
           <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. </p>
+          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-          </div>
-       </div>
-        <div class="col-md-4">
-          <div class="thumbnail">
-            <img src="http://placehold.it/800x500" alt="">
+        </div><!-- /.col-lg-4 -->
+       <!-- <div class="col-lg-4">
+          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
           <h2>Heading</h2>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <div class="thumbnail">
-            <img src="http://placehold.it/800x500" alt="">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-          </div>
-       </div>
-        <div class="col-md-4">
-          <div class="thumbnail">
-            <img src="http://placehold.it/800x500" alt="">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-          </div>
-       </div>
-        <div class="col-md-4">
-          <div class="thumbnail">
-            <img src="http://placehold.it/800x500" alt="">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-          </div>
-        </div>
-      </div>
--->
-      <div class="row">
+        </div><!-- /.col-lg-4 -->
+      </div><!-- /.row -->
+
+
+        <div class="row">
          <%if @projects %>
           <%@projects.each do |project|%>
         <div class="col-md-4">
-         <div class="thumbnail">
+         
           <h2><%=link_to (project.title), project_path(project)%></h2>
           <p><%=project.des%></p>
           <p><a class="btn btn-default" href="/projects/<%=project.id%>" role="button">View details &raquo;</a></p>
-        </div>
+
         </div>
          <%end%>
         <%end%>
-      
 
-            
-
-
-
+      </div>
 <div id="map-canvas"></div>
-
-
-
-
-
-
-
-
-
       <hr>
       <footer>
         <p>&copy; EXTRARA 2015</p>
       </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
