--- a/app/views/static/index.html
+++ b/app/views/static/index.html
@@ -1,1 +1,137 @@
-hello
+<!DOCTYPE html>
+<!-- saved from url=(0019)http://extrara.com/ -->
+<html lang="en" hola_ext_inject="disabled"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>EXTRARA</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="http://extrara.com/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="http://extrara.com/css/grayscale.css" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+    <link href="./EXTRARA_files/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="./EXTRARA_files/css" rel="stylesheet" type="text/css">
+    <link href="./EXTRARA_files/css(1)" rel="stylesheet" type="text/css">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+<script type="text/javascript" charset="UTF-8" src="./EXTRARA_files/common.js"></script><script type="text/javascript" charset="UTF-8" src="./EXTRARA_files/util.js"></script><script type="text/javascript" charset="UTF-8" src="./EXTRARA_files/stats.js"></script></head>
+
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-custom navbar-fixed-top top-nav-collapse" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+                    <i class="fa fa-bars"></i>
+                </button>
+                <a class="navbar-brand page-scroll" href="http://extrara.com/#page-top">
+                    <!--<i class="fa fa-play-circle"></i>-->  <span class="light"></span> EXTRARA
+                </a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+                <ul class="nav navbar-nav">
+                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+                    <li class="hidden">
+                        <a href="http://extrara.com/#page-top"></a>
+                    </li>
+                    <li class="">
+                        <a class="page-scroll" href="http://extrara.com/#about">Mission</a>
+                    </li>
+                    <li class="active">
+                        <a class="page-scroll" href="http://extrara.com/#download">Join</a>
+                    </li>
+                     
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+
+    <!-- Intro Header -->
+    <header class="intro">
+        <div class="intro-body">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8 col-md-offset-2">
+                        <img src="./EXTRARA_files/extrarwht.png" alt="" width="80%" height="20%" class="logo">
+                        <h1 class="brand-heading"></h1>
+                        <p class="intro-text">A global community for space ventures.</p>
+                        <a href="http://extrara.com/#about" class="btn btn-circle page-scroll">
+                            <i class="fa fa-angle-double-down animated"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <!-- About Section -->
+    <section id="about" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Our Mission</h2>
+                <p>Extrara aims to inspire a new generation to build for a future in space. We believe that these ventures should be accessible to all of humankind.</p>
+                <p>By supporting creative collaboration in a way that challenges conventional thinking, we can remove traditional boundaries, validate ideas, and propel projects forward.</p>
+                <p>Our platform connects the efforts of a global community on a unified mission.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Download Section -->
+    <section id="download" class="content-section text-center">
+        <div class="download-section">
+            <div class="container">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <h2>Influence the future</h2>
+                    <p>You can be a part of humanity's next steps beyond Earth.</p>
+                    <a href="http://extrara.com/join" class="btn btn-default btn-lg">Join Us</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Footer -->
+    <footer>
+        <div class="container text-center">
+            <p>Copyright © EXTRARA 2015</p>
+        </div>
+    </footer>
+
+    <!-- jQuery -->
+    <script src="./EXTRARA_files/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="./EXTRARA_files/bootstrap.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="./EXTRARA_files/jquery.easing.min.js"></script>
+
+    <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
+    <script type="text/javascript" src="./EXTRARA_files/js"></script><script src="./EXTRARA_files/main.js"></script>
+
+    <!-- Custom Theme JavaScript -->
+    <script src="./EXTRARA_files/grayscale.js"></script>
+
+
+
+
+</body></html>
