--- a/app/views/welcome/index.html
+++ b/app/views/welcome/index.html
@@ -53,7 +53,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="../navbar/"></a></li>
             <li><a href="../navbar-static-top/"></a></li>
-            <li class="active"><a href="file:///Users/Aaron/Desktop/Extrara%20Scratch/P2-Profile/P2-Profile.html">Profile <span class="sr-only">(current)</span></a></li>
+            <li class="active"> <%=link_to "Profile", user_path(current_user.id)%> </li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
