--- a/app/views/static/index.html
+++ b/app/views/static/index.html
@@ -17,9 +17,9 @@
     <link href="http://extrara.com/css/grayscale.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/css" rel="stylesheet" type="text/css">
-    <link href="assets/css/css(1)" rel="stylesheet" type="text/css">
+    <link href="http://extrara-assets.s3-website-us-east-1.amazonaws.com/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="http://extrara-assets.s3-website-us-east-1.amazonaws.com/css/css" rel="stylesheet" type="text/css">
+    <link href="http://extrara-assets.s3-website-us-east-1.amazonaws.com/css/css(1)" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -71,7 +71,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <img src="assets/extrarwht.png" alt="" width="80%" height="20%" class="logo">
+                        <img src="http://extrara-assets.s3-website-us-east-1.amazonaws.com/extrarwht.png" alt="" width="80%" height="20%" class="logo">
                         <h1 class="brand-heading"></h1>
                         <p class="intro-text">A global community for space ventures.</p>
                         <a href="http://extrara.com/#about" class="btn btn-circle page-scroll">
@@ -117,19 +117,19 @@
     </footer>
 
     <!-- jQuery -->
-    <script src="assets/js/jquery.js"></script>
+    <script src="http://extrara-assets.s3-website-us-east-1.amazonaws.com/js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="http://extrara-assets.s3-website-us-east-1.amazonaws.com/js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="assets/js/jquery.easing.min.js"></script>
+    <script src="http://extrara-assets.s3-website-us-east-1.amazonaws.com/js/jquery.easing.min.js"></script>
 
     <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-    <script type="text/javascript" src="assets/js/js"></script><script src="./EXTRARA_files/main.js"></script>
+    <script type="text/javascript" src="http://extrara-assets.s3-website-us-east-1.amazonaws.com/js/js"></script><script src="./EXTRARA_files/main.js"></script>
 
     <!-- Custom Theme JavaScript -->
-    <script src=".assets/js/grayscale.js"></script>
+    <script src=".http://extrara-assets.s3-website-us-east-1.amazonaws.com/js/grayscale.js"></script>
 
 
 
