--- a/app/views/static/index.html
+++ b/app/views/static/index.html
@@ -71,7 +71,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <img src="http://extrara-assets.s3-website-us-east-1.amazonaws.com/extrarwht.png" alt="" width="80%" height="20%" class="logo">
+                        <img src="http://extrara-assets.s3-website-us-east-1.amazonaws.com/images/extrarwht.png" alt="" width="80%" height="20%" class="logo">
                         <h1 class="brand-heading"></h1>
                         <p class="intro-text">A global community for space ventures.</p>
                         <a href="http://extrara.com/#about" class="btn btn-circle page-scroll">
