updating js sources

--- a/app/views/static/index.html
+++ b/app/views/static/index.html
@@ -28,7 +28,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-<script type="text/javascript" charset="UTF-8" src="./EXTRARA_files/common.js"></script><script type="text/javascript" charset="UTF-8" src="./EXTRARA_files/util.js"></script><script type="text/javascript" charset="UTF-8" src="./EXTRARA_files/stats.js"></script></head>
+<script type="text/javascript" charset="UTF-8" src="http://extrara-assets.s3-website-us-east-1.amazonaws.com/js/common.js"></script><script type="text/javascript" charset="UTF-8" src="http://extrara-assets.s3-website-us-east-1.amazonaws.com/js/util.js"></script><script type="text/javascript" charset="UTF-8" src="http://extrara-assets.s3-website-us-east-1.amazonaws.com/js/stats.js"></script></head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
@@ -126,10 +126,10 @@
     <script src="http://extrara-assets.s3-website-us-east-1.amazonaws.com/js/jquery.easing.min.js"></script>
 
     <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-    <script type="text/javascript" src="http://extrara-assets.s3-website-us-east-1.amazonaws.com/js/js"></script><script src="./EXTRARA_files/main.js"></script>
+    <script type="text/javascript" src="http://extrara-assets.s3-website-us-east-1.amazonaws.com/js/js"></script><script src="http://extrara-assets.s3-website-us-east-1.amazonaws.com/js/main.js"></script>
 
     <!-- Custom Theme JavaScript -->
-    <script src=".http://extrara-assets.s3-website-us-east-1.amazonaws.com/js/grayscale.js"></script>
+    <script src="http://extrara-assets.s3-website-us-east-1.amazonaws.com/js/grayscale.js"></script>
 
 
 
