--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,18 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+
+  <% if controller_name == "static" && action_name == "index.html.erb" %>
+     <%= stylesheet_link_tag "staticindex" %>
+     <%= stylesheet_link_tag "staticindex2" %>
+     <%= javascript_include_tag "welcome" %>
+     <%= javascript_include_tag "common" %>
+     <%= javascript_include_tag "grayscale" %>
+	 <%= javascript_include_tag "main" %>
+	 <%= javascript_include_tag "stats" %>
+	 <%= javascript_include_tag "util" %>
+
+  <% end %>
 </head>
 <body>
 
