git add .git add .

--- a/app/views/static/index.html
+++ b/app/views/static/index.html
@@ -11,10 +11,10 @@
     <title>EXTRARA</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="http://extrara.com/css/bootstrap.min.css" rel="stylesheet">
+    <!--<link href="http://extrara.com/css/bootstrap.min.css" rel="stylesheet">-->
 
     <!-- Custom CSS -->
-    <link href="http://extrara.com/css/grayscale.css" rel="stylesheet">
+    <!--<link href="http://extrara.com/css/grayscale.css" rel="stylesheet">-->
 
     <!-- Custom Fonts -->
   <!--  <link href="http://extrara-assets.s3-website-us-east-1.amazonaws.com/css/font-awesome.min.css" rel="stylesheet" type="text/css">
