--- a/app/assets/stylesheets/grayscale.css
+++ b/app/assets/stylesheets/grayscale.css
@@ -315,7 +315,7 @@ a:focus {
 
 .btn-default:hover,
 .btn-default:focus {
-    border: 1px solid ##fff;
+    border: 1px solid #fff;
     outline: 0;
     color: #000;
     background-color: #fff;
