--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,10 +3,9 @@
 <head>
   <title>Expggo</title>
   <% if controller_name == "static"%>
-     <%= stylesheet_link_tag 'staticindex' %>
-     <%= stylesheet_link_tag 'staticindex2' %>
      <%= stylesheet_link_tag 'grayscale'%>
      <%= stylesheet_link_tag 'bootstrap.min'%>
+     <%= stylesheet_link_tag 'font-awesome.min'%>
      <%= javascript_include_tag "welcome" %>
      <%= javascript_include_tag "common" %>
      <%= javascript_include_tag "grayscale" %>
