i did itgit add .

--- a/app/views/static/index.html
+++ b/app/views/static/index.html
@@ -16,8 +16,8 @@
     <!-- Custom CSS -->
     <!--<link href="http://extrara.com/css/grayscale.css" rel="stylesheet">-->
 
-    <!-- Custom Fonts -->
-  <!--  <link href="http://extrara-assets.s3-website-us-east-1.amazonaws.com/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    
+    <link href="http://extrara-assets.s3-website-us-east-1.amazonaws.com/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://extrara-assets.s3-website-us-east-1.amazonaws.com/css/css" rel="stylesheet" type="text/css">
     <link href="http://extrara-assets.s3-website-us-east-1.amazonaws.com/css/css(1)" rel="stylesheet" type="text/css">-->
 
