--- a/app/views/static/index.html
+++ b/app/views/static/index.html
@@ -77,6 +77,7 @@
                         <a href="http://extrara.com/#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
+                        <%=fa_icon "fa-angle-double-down"%>
                     </div>
                 </div>
             </div>
