--- a/app/views/static/index.html
+++ b/app/views/static/index.html
@@ -52,10 +52,10 @@
                         <a href="http://extrara.com/#page-top"></a>
                     </li>
                     <li class="">
-                        <a class="page-scroll" href="http://extrara.com/#about">Mission</a>
+                        <a class="page-scroll" href="/#about">Mission</a>
                     </li>
                     <li class="active">
-                        <a class="page-scroll" href="http://extrara.com/#download">Join</a>
+                        <a class="page-scroll" href="/#download">Join</a>
                     </li>
                      
                 </ul>
@@ -74,7 +74,7 @@
                         <img src="http://extrara-assets.s3-website-us-east-1.amazonaws.com/images/extrarwht.png" alt="" width="80%" height="20%" class="logo">
                         <h1 class="brand-heading"></h1>
                         <p class="intro-text">A global community for space ventures.</p>
-                        <a href="http://extrara.com/#about" class="btn btn-circle page-scroll">
+                        <a href="/#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
                         <%=fa_icon "fa-angle-double-down"%>
@@ -103,7 +103,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Influence the future</h2>
                     <p>You can be a part of humanity's next steps beyond Earth.</p>
-                    <a href="http://extrara.com/join" class="btn btn-default btn-lg">Join Us</a>
+                    <a href="/join" class="btn btn-default btn-lg">Join Us</a>
                 </div>
             </div>
         </div>
