--- a/app/views/welcome/index.html
+++ b/app/views/welcome/index.html
@@ -64,66 +64,12 @@
       <div class="container">
         <h1>Collaborative Creation</h1>
         <p>Extrara is a community of developers engineers designers astronomers entreprenuers and more. With collaborative creation the world is....</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Start your project &raquo;</a></p>
+        <p><a class="btn btn-primary btn-lg" href="projects/new" role="button">Start your project &raquo;</a></p>
       </div>
     </div>
 
     <div class="container">
 
-      <!-- Example row of columns -->
-   <!--   <div class="row">
-        <div class="col-md-4">
-          <div class="thumbnail">
-            <img src="http://placehold.it/800x500" alt="">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-          </div>
-       </div>
-        <div class="col-md-4">
-          <div class="thumbnail">
-            <img src="http://placehold.it/800x500" alt="">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-          </div>
-       </div>
-        <div class="col-md-4">
-          <div class="thumbnail">
-            <img src="http://placehold.it/800x500" alt="">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <div class="thumbnail">
-            <img src="http://placehold.it/800x500" alt="">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-          </div>
-       </div>
-        <div class="col-md-4">
-          <div class="thumbnail">
-            <img src="http://placehold.it/800x500" alt="">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-          </div>
-       </div>
-        <div class="col-md-4">
-          <div class="thumbnail">
-            <img src="http://placehold.it/800x500" alt="">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-          </div>
-        </div>
-      </div>
--->
       <div class="row">
          <%if @projects %>
           <%@projects.each do |project|%>
