--- a/app/views/static/index.html
+++ b/app/views/static/index.html
@@ -54,8 +54,11 @@
                     <li class="">
                         <a class="page-scroll" href="/#about">Mission</a>
                     </li>
-                    <li class="active">
-                        <a class="page-scroll" href="/#download">Join</a>
+                    <li class="">
+                        <a class="page-scroll" href="/join">Join</a>
+                    </li>
+                    <li class="">
+                        <a class="page-scroll" href="/users/sign_in">Sign In</a>
                     </li>
                      
                 </ul>
