--- a/app/views/welcome/index.html
+++ b/app/views/welcome/index.html
@@ -38,7 +38,7 @@
             <li><a href="/forums">Forum</a></li>
             <li><%=link_to("Projects", root_path )%></li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%=current_user.name%> <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%=current_user.fullname%> <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <li> <li class="active"> <%=link_to "Profile", user_path(current_user.id)%> <span class="sr-only"></span></li></li>
                 <li><a href="#">Another action</a></li>
