asdfasdjafa forem shit

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -34,7 +34,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/forum">Forum</a></li>
+            <li><a href="/forums">Forum</a></li>
             <li><a href="/projects">Projects</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -221,20 +221,6 @@
       <footer>
         <p>&copy; EXTRARA 2015</p>
       </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
