--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -35,14 +35,14 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/forum">Forum</a></li>
+            <li><a href="/forums">Forum</a></li>
             <li><%=link_to("Projects", root_path)%></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="../navbar/"></a></li>
             <li><a href="../navbar-static-top/"></a></li>
              <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%=current_user.name%> <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%=current_user.firstname%> <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <li> <li class="active"> <%=link_to "Profile", user_path(current_user.id)%> <span class="sr-only"></span></li></li>
                 <li><a href="#">Another action</a></li>
@@ -60,7 +60,7 @@
     <div class="prof-section">
                     <center>
                     <%= image_tag @user.image.url(:medium) %>
-                    <h3 class="media-heading">Hi, I'm <%=@user.name%> <small><%=@user.Location%></small></h3>
+                    <h3 class="media-heading">Hi, I'm <%=@user.firstname%>!<small><%=@user.Location%></small></h3>
                     <span><strong>Skills: </strong></span>
                         <%=@user.skills%>
                     </center>
