--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,9 @@
 <html>
 <head>
   <title>Extrara</title>
+  http://i.imgur.com/vDxcF1P.png
+  <link rel="shortcut icon" href="http://i.imgur.com/vDxcF1P.png">
+
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   <% if controller_name == "static"%>
      <%= stylesheet_link_tag 'bootstrap.min'%>
