--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -18,7 +18,7 @@
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
 </script>
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), multipart: true) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), :html=> {multipart: true}) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
@@ -47,9 +47,8 @@
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
   <div class="field">
-    <%= f.label :image %>
-    <%= f.file_field :image %>
-  </div>
+  <%= f.input :avatar, as: :file %>
+</div>
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
