--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -47,8 +47,9 @@
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
   <div class="field">
-  <%= f.input :avatar, as: :file %>
-</div>
+    <%= f.label :avatar %>
+    <%= f.file_field :avatar %>
+  </div>
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
