--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -32,7 +32,7 @@
   </div>
   <div class="field">
     Add photo
-    <%= f.file_field :image %>
+    <%= f.file_field :avatar %>
   </div>
   <div class="field">
     <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
