--- a/app/views/welcome/index.html
+++ b/app/views/welcome/index.html
@@ -36,7 +36,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="/forums">Forum</a></li>
-            <li><%=link_to("Projects", root_path )%></li>
+            <li><%=link_to("Explore", root_path )%></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%=current_user.fullname%> <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
