--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -35,8 +35,8 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/forums">Forum</a></li>
-            <li><%=link_to("Projects", root_path)%></li>
+            <li><a href="/forums/">Forum</a></li>
+            <li><%=link_to("Explore", root_path)%></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="../navbar/"></a></li>
