--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -71,7 +71,7 @@
 
     <div class="prof-photo">
                     
-                        <%= image_tag @user.avatar.url(:thumb) %>
+                        <%= image_tag @user.avatar.url(:small) %>
                     
                     
     </div>
