--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -77,7 +77,7 @@
     </div>
     <div class="container">
         <div class="name-container">
-          <div class="user-name">Hi, I'm <%=current_user.fullname%><br><small></small></div>
+          <div class="user-name">Hi, I'm <%=@user.fullname%><br><small></small></div>
 
       </div>
       <div class="skills-container">
