--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -80,7 +80,7 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <div class="form-group string optional project_title"><label class="string optional control-label" for="project_title">Title</label><%= f.input :title %>
+    <div class="form-group string optional project_title"><label class="string optional control-label" for="project_title"></label><%= f.input :title %>
 </div>
     
 
