--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -11,7 +11,7 @@
 
     <title>New Project</title>
 
-   <link rel="stylesheet" type="text/css" href="https://s3.amazonaws.com/extrara-assets/css/bootstrap.css?X-Amz-Date=20150920T191432Z&X-Amz-Expires=300&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Signature=857a10b001ed1c78e19768372cc683c2190c77d6f95970b2d69a5f12f3ef8de2&X-Amz-Credential=ASIAJKBPH5JYJGWTV2QQ/20150920/us-east-1/s3/aws4_request&X-Amz-SignedHeaders=Host&x-amz-security-token=AQoDYXdzEKz//////////wEakALUAiiIseGNlG4IPqZ6R88dEv8Z9CiQ5E2ooYkEo16/SqSHDMP7mZmQBdwj2TXNa5zvNIFkOU9lbIBVf4lZuLBeIFkDZuhAyNhO%2BCGe/BCEJ58s80QNZbfKWue6ET/NPnq7GZrCjZvwTaUvTxjH5H23Q/HtpB6Vk5qDOK2r%2BU%2B7uU0WMsC5EaQr4tdp%2BhXs57x/HXyTFDof5ZRznhtTd6924vvN7oKH6TgtIWR12oToK1SqHYuNadc2cQ5KpA0ji5QPE/fAx3zlHpDcGyoJ7cUqULBgiJBqmCjoHl7rwbXdzrptFjIfuJztE3rB3sJagzpOwCZlF2GJwLb6XG6XsSr8/pRtPpAbXAQf3rys1zb84yCf/vuvBQ%3D%3D">    
+   <link rel="stylesheet" type="text/css" href="https://s3.amazonaws.com/extrara-assets/css/bootstrap.css">    
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
   </head>
