--- a/app/views/static/index.html
+++ b/app/views/static/index.html
@@ -55,7 +55,7 @@
                         <a class="page-scroll" href="/#about">Mission</a>
                     </li>
                     <li class="">
-                        <a class="page-scroll" href="/join">Join</a>
+                        <a class="page-scroll" href="/users/sign_up">Join</a>
                     </li>
                     <li class="">
                         <a class="page-scroll" href="/users/sign_in">Sign In</a>
@@ -106,7 +106,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Influence the future</h2>
                     <p>You can be a part of humanity's next steps beyond Earth.</p>
-                    <a href="/join" class="btn btn-default btn-lg">Join Us</a>
+                    <a href="/users/sign_up" class="btn btn-default btn-lg">Join Us</a>
                 </div>
             </div>
         </div>
