--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -384,8 +384,8 @@
   <div class="form-actions">
 
     <div class="field">
-    Add photo
-    <input id="user_image" name="user[image]" type="file" />
+    <%= f.label :image %>
+    <%= f.file_field :avatar %>
   </div>
 
   <p></p>
