--- a/app/views/welcome/index.html
+++ b/app/views/welcome/index.html
@@ -35,7 +35,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/forums">Forum</a></li>
+            <li><a href="/forums/">Forum</a></li>
             <li><%=link_to("Explore", root_path )%></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%=current_user.fullname%> <span class="caret"></span></a>
