--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,13 +30,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-            <a class="navbar-brand" href="/">EXTRARA</a>
+            <%=link_to image_tag("https://s3-us-west-1.amazonaws.com/extrara-images/images/logo/Extrarablk2.png", :class=>"logo"), root_path%>
+
          <!-- <a class="navbar-brand" href="#">EXTRARA</a> -->
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/forum">Discover</a></li>
-            <li><a href="/">Create</a></li>
+            <li><a href="/forum">Forum</a></li>
+            <li><a href="/">Explore</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="../navbar/"></a></li>
