--- a/app/views/welcome/index.html
+++ b/app/views/welcome/index.html
@@ -31,7 +31,7 @@
             <span class="icon-bar"></span>
           </button>
 
-          <%=link_to("EXTRARA", root_path, { :class=>"navbar-brand" } )%>
+          <%=link_to image_tag("https://s3-us-west-1.amazonaws.com/extrara-images/images/logo/Extrarablk2.png", :class=>"logo"), root_path%>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
