--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -73,7 +73,7 @@
   <div class="">
 <form accept-charset="UTF-8" action="/projects" class="simple_form new_project" id="new_project" method="post" novalidate="novalidate"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="hy5tNV3VPXGqWa4BWubz4cX9lK0247kdHRV4bNWaSKg=" /></div>
   
-<%= form_for @project, url: projects_path,:class=>'form-control', :html=> { multipart: true } do |f| %>  
+<%= form_for (@project, multipart: true)do |f| %>  
     
   <div class="form-inputs">
     <div class="form-group string optional project_title"><label class="string optional control-label" for="project_title">Title</label>
