--- a/app/views/welcome/index.html
+++ b/app/views/welcome/index.html
@@ -62,9 +62,9 @@
 
 <div class="jumbotron">
       <div class="container">
-        <h1>Collaborative Creation</h1>
-        <p>Extrara is a community of developers engineers designers astronomers entreprenuers and more. With collaborative creation the world is....</p>
-        <p><a class="btn btn-primary btn-lg" href="projects/new" role="button">Start your project &raquo;</a></p>
+        <h1>Share your work with the world</h1>
+        <p>Extrara Projects help you organize and communicate your work with a global community.</p>
+        <p><a class="btn btn-primary btn-lg" href="projects/new" role="button">Create &raquo;</a></p>
       </div>
     </div>
 
@@ -82,40 +82,11 @@
         </div>
          <%end%>
         <%end%>
-      
-
-            
-
-
-
 <div id="map-canvas"></div>
-
-
-
-
-
-
-
-
-
       <hr>
       <footer>
         <p>&copy; EXTRARA 2015</p>
       </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
