--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -37,7 +37,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="/forums/">Forum</a></li>
-            <li><a href="/">Explore</a></li>
+            <li><a href="/projects/new">Create</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="../navbar/"></a></li>
@@ -95,15 +95,7 @@
                         
 
       </div>
-
-
-
-     
-    
-
-
           <div class="row">
-
             <div class="project-card">
                 <h3 class="page-header">What I'm Working On:</h3>
             </div>
@@ -122,7 +114,7 @@
        </div>
         <%end%>
         <%end%>
-
+      </div>
     
       <hr>
       <footer>
