--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -28,13 +28,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-            <a class="navbar-brand" href="/">EXTRARA</a>
+             <%=link_to image_tag("https://s3-us-west-1.amazonaws.com/extrara-images/images/logo/Extrarablk2.png", :class=>"logo"), root_path%>
          <!-- <a class="navbar-brand" href="#">EXTRARA</a> -->
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/forum">Discover</a></li>
-            <li><a href="/">Create</a></li>
+            <li><a href="/forums/">Discover</a></li>
+            <li><a href="/projects/new">Create</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="../navbar/"></a></li>
@@ -42,7 +42,7 @@
              <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%=current_user.firstname%> <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li> <li class="active"> <a href="/users/2">Profile</a> <span class="sr-only"></span></li></li>
+                <li> <li class="active"> <%=link_to current_user.firstname, user_path(current_user.id)%> <span class="sr-only"></span></li></li>
                 <li><a href="#">Inbox</a></li>
                 <li class="divider"></li>
                 <li class="dropdown-header"></li>
