--- a/app/views/welcome/index.html
+++ b/app/views/welcome/index.html
@@ -61,9 +61,9 @@
 
 <div class="jumbotron">
       <div class="container">
-        <h1>Share your work with the world</h1>
-        <p>Extrara Projects help you organize and communicate your work with a global community.</p>
-        <p><a class="btn btn-primary btn-lg" href="projects/new" role="button">Create &raquo;</a></p>
+        <h1 class="text-center">Share your work with the world</h1>
+        <p class="text-center">Extrara Projects help you organize and communicate your work with a global community.</p>
+        <p class="text-center"><a class="btn btn-primary btn-lg" href="projects/new" role="button">Create</a></p>
       </div>
     </div>
 
